--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </div>     
         <script id="parsed-resig" type="text/template">
-        <div class="wrapper">
+        <div class="wrapper clear-area">
         <% for (var i = 0; i < resultResponse.hits.length; i++) { %>
             <figure>
             <a href="#">
